# race-to-the-crystal

./: .encryption-key  .gitignore  3D_MODE_STARTUP.md  AGENTS.md  BUG_REPORT.md  CLAUDE.md  CLAUDE_API_PLAN.md  CODE_SMELLS_TODO.md  FEATURES_ADDED.md  FLOWING_LINES_IMPLEMENTATION.md  GAME.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  MIGRATION.md  Makefile  PLAN.md  README.md  VIEW_TODO.md  main.py  pyproject.toml  test_3d.py  test_gameplay_flaws.py
client/: ai_client.py  audio_manager.py  board_3d.py  camera_3d.py  camera_controller.py  client_main.py  deployment_menu_controller.py  game_action_handler.py  game_window.py  input_handler.py  menu_main.py  music_generator.py  network_client.py  renderer_2d.py  renderer_3d.py  sound_effects.py  token_3d.py
client/shaders/: glow_fragment.glsl  glow_vertex.glsl
client/sprites/: __init__.py  board_sprite.py  token_sprite.py
client/ui/: __init__.py  arcade_ui.py  async_arcade.py  board_view.py  camera.py  chat_widget.py  lobby_view.py  (+8 more)
docs/: GAME.md  NETWORK.md
examples/: claude_complete_demo.py  claude_demo.py  test_ai_actions_manual.py  test_ai_observation_manual.py
game/: ai_actions.py  ai_observation.py  board.py  combat.py  crystal.py  game_state.py  generator.py  movement.py  mystery_square.py  player.py  token.py
network/: connection.py  messages.py  protocol.py
server/: ai_spawner.py  game_coordinator.py  game_server.py  lobby.py  server_main.py
shared/: constants.py  corner_layout.py  enums.py  logging_config.py  position.py  ui_config.py
tests/: test_3d_controls.py  test_ai_actions.py  test_ai_observation.py  test_board.py  test_chat_integration.py  test_combat.py  test_complete_3d_controls.py  test_crystal.py  test_game_coordinator_integration.py  test_game_creation.py  test_game_state.py  test_game_window_initialization.py  test_generator.py  test_lobby_message_handling.py  test_mouse_look.py  test_movement.py  test_network_animations_simple.py  test_network_protocol.py  test_security_validation.py  test_sound_effects.py  test_token.py
(+8 files in other folders)
