[project]
name = "race-to-the-crystal"
version = "0.1.0"
description = "A networked multiplayer vector graphics game for 2-4 players"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
test = "pytest:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
