[project]
name = "race-to-the-crystal"
version = "0.1.0"
description = "A networked multiplayer vector graphics game for 2-4 players"
requires-python = ">=3.14"
dependencies = [
    "arcade>=2.6.17",
]

[project.scripts]
test = "pytest:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
