[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game", "client", "server", "shared", "network"]

[project]
name = "race-to-the-crystal"
version = "0.1.0"
description = "A networked multiplayer vector graphics game for 2-4 players"
requires-python = ">=3.14"
dependencies = [
    "arcade>=2.6.17",
    "numpy>=1.24.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
race-to-the-crystal = "client.menu_main:main"
race-direct = "client.client_main:main"
race-server = "server.server_main:main"
race-ai-client = "client.ai_client:run_ai_client"
test = "pytest:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
